reviewing JPMS chapters