@@ -5,59 +5,51 @@
 - [39 Servizi in JPMS Il Modello ServiceLoader](#39-servizi-in-jpms-il-modello-serviceloader)
   - [39.1 Il Problema che i Servizi Risolvono](#391-il-problema-che-i-servizi-risolvono)
     - [39.1.1 Ruoli nel Modello dei Servizi](#3911-ruoli-nel-modello-dei-servizi)
-    - [39.1.2 Modulo dell’Interfaccia di Servizio](#3912-modulo-dellinterfaccia-di-servizio)
+    - [39.1.2 Modulo Interfaccia del Servizio](#3912-modulo-interfaccia-del-servizio)
     - [39.1.3 Modulo Provider del Servizio](#3913-modulo-provider-del-servizio)
     - [39.1.4 Modulo Consumer del Servizio](#3914-modulo-consumer-del-servizio)
     - [39.1.5 Caricamento dei Servizi a Runtime](#3915-caricamento-dei-servizi-a-runtime)
     - [39.1.6 Regole di Risoluzione dei Servizi](#3916-regole-di-risoluzione-dei-servizi)
-  - [39.2 Moduli Named, Automatic e Unnamed](#392-moduli-named-automatic-e-unnamed)
-    - [39.2.1 Moduli Named](#3921-moduli-named)
-    - [39.2.2 Moduli Automatic](#3922-moduli-automatic)
-    - [39.2.3 Modulo Unnamed](#3923-modulo-unnamed)
-    - [39.2.4 Sintesi Comparativa](#3924-sintesi-comparativa)
-  - [39.3 Ispezionare Moduli e Dipendenze](#393-ispezionare-moduli-e-dipendenze)
-    - [39.3.1 Descrivere Moduli con java](#3931-descrivere-moduli-con-java)
-    - [39.3.2 Descrivere JAR Modulari](#3932-descrivere-jar-modulari)
-    - [39.3.3 Analizzare le Dipendenze con jdeps](#3933-analizzare-le-dipendenze-con-jdeps)
-  - [39.4 Creare Immagini Runtime Personalizzate con jlink](#394-creare-immagini-runtime-personalizzate-con-jlink)
-  - [39.5 Creare Applicazioni Self-Contained con jpackage](#395-creare-applicazioni-self-contained-con-jpackage)
-  - [39.6 Sintesi Finale JPMS nella Pratica](#396-sintesi-finale-jpms-nella-pratica)
+    - [39.1.7 Livello Service Locator](#3917-livello-service-locator)
+    - [39.1.8 Schema Sequenziale di Invocazione](#3918-schema-sequenziale-di-invocazione)
+    - [39.1.9 Tabella Riassuntiva dei Componenti](#3919-tabella-riassuntiva-dei-componenti)
+
 
 ---
 
 `JPMS` include un meccanismo di servizio integrato che permette ai `moduli` di scoprire e utilizzare implementazioni a runtime
-senza codificare rigidamente le dipendenze tra `provider` e `consumer`.
+senza codificare rigidamente dipendenze tra `provider` e `consumer`.
 
 Questo meccanismo è basato sulla `ServiceLoader API` esistente, ma i moduli lo rendono affidabile, esplicito e sicuro.
 
 ## 39.1 Il Problema che i Servizi Risolvono
 
-Talvolta un modulo deve utilizzare una funzionalità, ma non dovrebbe dipendere da un’implementazione specifica.
+Talvolta un modulo necessita di utilizzare una capacità, ma non dovrebbe dipendere da una implementazione specifica.
 
 Esempi tipici includono:
 - framework di logging
 - driver di database
-- sistemi di plugin
-- service provider selezionati a runtime
+- sistemi plugin
+- provider di servizi selezionati a runtime
 
-Senza i servizi, il consumer dovrebbe dipendere direttamente da un’implementazione concreta.
+Senza i servizi, il consumer dovrebbe dipendere direttamente da una implementazione concreta.
 
 Questo crea accoppiamento stretto e riduce la flessibilità.
 
 ### 39.1.1 Ruoli nel Modello dei Servizi
 
-Il `modello di servizio JPMS` coinvolge quattro ruoli distinti.
+Il `modello dei servizi JPMS` coinvolge quattro ruoli distinti.
 
 | Ruolo | Descrizione |
 | --- | --- |
-| `Service interface` | Definisce il contratto |
-| `Service provider` | Implementa il servizio |
-| `Service consumer` | Usa il servizio |
+| `Interfaccia del servizio` | Definisce il contratto |
+| `Provider del servizio` | Implementa il servizio |
+| `Consumer del servizio` | Utilizza il servizio |
 | `Service loader` | Scopre le implementazioni a runtime |
 
-### 39.1.2 Modulo dell’Interfaccia di Servizio
+### 39.1.2 Modulo Interfaccia del Servizio
 
-La `service interface` definisce l’API da cui i `consumer` dipendono.
+L’`interfaccia del servizio` definisce l’API da cui i `consumer` dipendono.
 
 Deve essere esportata affinché altri moduli possano vederla.
 
@@ -76,11 +68,11 @@ module com.example.service {
 ```
 
 !!! note
-    Il modulo dell’interfaccia di servizio non dovrebbe contenere implementazioni.
+    Il modulo dell’interfaccia del servizio non dovrebbe contenere implementazioni.
 
 ### 39.1.3 Modulo Provider del Servizio
 
-Un `modulo provider` implementa l’interfaccia di servizio e dichiara che fornisce il servizio.
+Un `modulo provider` implementa l’interfaccia del servizio e dichiara di fornire il servizio.
 
 ```java
 package com.example.service.impl;
@@ -102,13 +94,13 @@ module com.example.provider.english {
 ```
 
 Punti chiave:
-- Il `provider` dipende dalla `service interface`
-- La classe di implementazione non deve essere esportata
-- La direttiva provides registra l’implementazione
+- Il `provider` dipende dall’`interfaccia del servizio`
+- La classe di implementazione non necessita di essere esportata
+- La direttiva `provides with` registra l’implementazione
 
 ### 39.1.4 Modulo Consumer del Servizio
 
-Il `modulo consumer` dichiara che utilizza un servizio, ma non nomina alcuna implementazione.
+Il `modulo consumer` dichiara di utilizzare un servizio, ma non nomina alcuna implementazione.
 
 ```java
 module com.example.consumer {
@@ -120,12 +112,12 @@ module com.example.consumer {
 !!! note
     `uses` dichiara l’intenzione di scoprire implementazioni a runtime.
     
-    Un modulo che dichiara `uses` ma non ha alcun provider corrispondente sul module path compila normalmente,
+    Un modulo che dichiara `uses` ma non ha provider corrispondenti nel module path compila normalmente,
     ma `ServiceLoader` restituisce un risultato vuoto a runtime.
 
 ### 39.1.5 Caricamento dei Servizi a Runtime
 
-La `ServiceLoader API` esegue la discovery dei servizi.
+La `ServiceLoader API` esegue la scoperta del servizio.
 
 Trova tutti i provider visibili al grafo dei moduli.
 
@@ -140,148 +132,112 @@ for (GreetingService service : loader) {
 
 `JPMS` garantisce che solo i provider dichiarati siano scoperti.
 
-La discovery “accidentale” basata su classpath è prevenuta.
+La scoperta “accidentale” basata su classpath è prevenuta.
 
 ### 39.1.6 Regole di Risoluzione dei Servizi
 
-Affinché un servizio sia individuabile da ServiceLoader, devono essere soddisfatte diverse condizioni:
+Affinché un servizio sia individuabile da `ServiceLoader`, devono essere soddisfatte diverse condizioni:
 
 | Regola | Significato |
 | ---- | ---- |
-| Il modulo provider deve essere leggibile | Risolto tramite il grafo requires |
-| L’interfaccia di servizio deve essere esportata | I consumer devono poterla vedere |
-| Il consumer deve dichiarare `uses` | Altrimenti ServiceLoader fallisce |
-| Il provider deve dichiarare `provides` | La discovery implicita è vietata |
+| Il modulo provider deve essere leggibile | Risolto dal grafo `requires` |
+| L’interfaccia del servizio deve essere esportata | I consumer devono vederla |
+| Il consumer (o il Service Locator) deve dichiarare `uses` | Altrimenti ServiceLoader fallisce |
+| Il provider deve dichiarare `provides` | La scoperta implicita è vietata |
 
----
+### 39.1.7 Livello Service Locator
 
-## 39.2 Moduli Named, Automatic e Unnamed
+È possibile introdurre un livello aggiuntivo denominato `Service Locator`.
 
-`JPMS` supporta diversi tipi di moduli per permettere una migrazione graduale dal classpath.
+In questa architettura:
 
-JPMS deve interoperare con codice legacy.
+- Il `consumer` non utilizza direttamente `ServiceLoader`
+- Il `Service Locator` è l’unico componente che dichiara `uses`
+- Il `consumer` dipende dal `Service Locator`
 
-Per supportare un’adozione graduale, la JVM riconosce tre diverse categorie di moduli.
+Struttura architetturale:
 
-### 39.2.1 Moduli Named
-
-Un `modulo named` ha un `module-info.class` e un’identità stabile.
-
-- Incapsulamento forte
-- Dipendenze esplicite
-- Supporto completo JPMS
-
-### 39.2.2 Moduli Automatic
-
-Un JAR senza module-info `posizionato sul module path` diventa un `modulo automatic`.
-
-Il suo nome è derivato dal nome del file JAR.
-
-- Legge tutti gli altri moduli
-- Esporta tutti i package
-- Nessun incapsulamento forte
-
-!!! note
-    I moduli automatic esistono per facilitare la migrazione.
-    Non sono adatti come soluzione di lungo termine.
-
-### 39.2.3 Modulo Unnamed
-
-Il codice sul classpath appartiene al `modulo unnamed`.
-
-- Legge tutti i moduli named
-- Tutti i package sono aperti
-- Non può essere richiesto da moduli named
-
-!!! note
-    Il `modulo unnamed` preserva il comportamento legacy del classpath.
-
-### 39.2.4 Sintesi Comparativa
-
-| Tipo di modulo | module-info presente? | Incapsulamento | Legge |
-| ---- | ---- | ---- | ---- |
-| `Named` | Sì | Forte | Solo dichiarati |
-| `Automatic` | No | Debole | Tutti i moduli |
-| `Unnamed` | No | Nessuno | Tutti i moduli |
-
----
-
-## 39.3 Ispezionare Moduli e Dipendenze
-
-### 39.3.1 Descrivere Moduli con java
-
-```bash
-java --describe-module java.sql
+```
+Consumer → Service Locator → ServiceLoader → Provider
 ```
 
-Questo mostra exports, requires e servizi di un modulo.
+Modulo del Service Locator:
 
-### 39.3.2 Descrivere JAR Modulari
-
-```bash
-jar --describe-module --file mylib.jar
+```java
+module com.example.locator {
+	requires com.example.service;
+	uses com.example.service.GreetingService;
+}
 ```
 
-### 39.3.3 Analizzare le Dipendenze con `jdeps`
+Classe Service Locator:
 
-`jdeps` analizza staticamente le dipendenze tra classi e moduli.
+```java
+package com.example.locator;
 
-```bash
-jdeps myapp.jar
+import java.util.ServiceLoader;
+import com.example.service.GreetingService;
+
+public class GreetingLocator {
+
+	public static GreetingService getService() {
+		return ServiceLoader
+				.load(GreetingService.class)
+				.findFirst()
+				.orElseThrow();
+	}
+}
 ```
 
-```bash
-jdeps --module-path mods --check my.module
+Modulo Consumer:
+
+```java
+module com.example.consumer {
+	requires com.example.locator;
+}
 ```
 
-Per rilevare l’uso di API interne del JDK:
+Il consumer non dichiara `uses` perché non invoca direttamente `ServiceLoader`.
 
-```bash
-jdeps --jdk-internals myapp.jar
+### 39.1.8 Schema Sequenziale di Invocazione
+
+Sequenza di esecuzione:
+
+1. Il `Consumer` invoca `GreetingLocator.getService()`
+2. Il `Service Locator` invoca `ServiceLoader.load(...)`
+3. Il `ServiceLoader` consulta il grafo dei moduli
+4. Il sistema individua i moduli che dichiarano `provides`
+5. Viene istanziata l’implementazione del `Provider`
+6. L’istanza viene restituita al `Consumer`
+
+Schema sequenziale:
+
+```
+Consumer
+   │
+   │ 1. getService()
+   ▼
+Service Locator
+   │
+   │ 2. ServiceLoader.load()
+   ▼
+ServiceLoader
+   │
+   │ 3. Risoluzione provider
+   ▼
+Provider Implementation
+   │
+   │ 4. Istanza restituita
+   ▼
+Consumer
 ```
 
----
+### 39.1.9 Tabella Riassuntiva dei Componenti
 
-## 39.4 Creare Immagini Runtime Personalizzate con `jlink`
+| Componente | Ruolo | exports | requires | uses | provides |
+|------------|-------|---------|----------|------|----------|
+| SPI | Definisce contratto | ✅ | ❌ | ❌ | ❌ |
+| Provider | Implementa servizio | ❌ | ✅ | ❌ | ✅ |
+| Service Locator | Esegue discovery | (opzionale) | ✅ | ✅ | ❌ |
+| Consumer | Usa il servizio | ❌ | ✅ | ❌ | ❌ |
 
-`jlink` costruisce un runtime Java minimale contenente solo i moduli richiesti da un’applicazione.
-
-```bash
-jlink
---module-path $JAVA_HOME/jmods:mods
---add-modules com.example.app
---output runtime-image
-```
-
-Vantaggi:
-- runtime più piccolo
-- avvio più rapido
-- nessun modulo JDK inutilizzato
-
----
-
-## 39.5 Creare Applicazioni Self-Contained con `jpackage`
-
-`jpackage` costruisce installer specifici per piattaforma o immagini applicative.
-
-```bash
-jpackage
---name MyApp
---input mods
---main-module com.example.app/com.example.Main
-```
-
-`jpackage` può produrre:
-- .exe / .msi (Windows)
-- .pkg / .dmg (macOS)
-- .deb / .rpm (Linux)
-
----
-
-## 39.6 Sintesi Finale: JPMS nella Pratica
-
-- `JPMS` introduce `incapsulamento forte` e dipendenze affidabili
-- I `moduli` sostituiscono convenzioni fragili basate sul classpath
-- I `servizi` permettono architetture disaccoppiate
-- I moduli `automatic` e `unnamed` supportano la migrazione
-- `jlink` e `jpackage` abilitano modelli di deployment moderni
